--- a/app.json
+++ b/app.json
@@ -1,18 +1,24 @@
 {
   "pages": [
-    "pages/home/home"
+    "pages/home/home",
+    "pages/detail/detail"
   ],
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
     "navigationBarTitleText": "Weixin",
-    "navigationBarTextStyle": "black"
+    "navigationBarTextStyle": "black",
+    "onReachBottomDistance": 50
   },
   "style": "v2",
   "sitemapLocation": "sitemap.json",
   "lazyCodeLoading": "requiredComponents",
   "usingComponents": {
     "l-grid": "/miniprogram_npm/lin-ui/grid/index",
-    "l-grid-item": "/miniprogram_npm/lin-ui/grid-item/index"
+    "l-grid-item": "/miniprogram_npm/lin-ui/grid-item/index",
+    "l-price": "/miniprogram_npm/lin-ui/price/index",
+    "l-tag": "/miniprogram_npm/lin-ui/tag/index",
+    "s-spu-preview": "components/sppu-preview/index",
+    "l-loadmore": "/miniprogram_npm/lin-ui/loadmore/index"
   }
 }
